fix content shift to menu breakpoint

--- a/styles/pages/Jobs.module.scss
+++ b/styles/pages/Jobs.module.scss
@@ -16,7 +16,7 @@
         padding-bottom: $grid * 5;
     }
 
-    @include media-query(large) {
+    @include media-query(menu-break) {
         padding: 0 0 $grid * 8 0;
         margin: 0 auto 0 25%;
     }
